fix word wrap of numbers using spaces for digit grouping

--- a/css/main.css
+++ b/css/main.css
@@ -559,6 +559,11 @@ cite
 
 }
 
+.nowrap
+{
+    white-space: nowrap;
+}
+
 /* page nav */
 
 .page-nav
